--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="date-details">
                 <p><strong>A Romantic Date</strong></p>
                 <p>📍 At Our Favorite Spot</p>
-                <p>📅 Tonight, February 21/23, 2026</p>
+                <p>📅 February 21/23, 2026</p>
                 <p>⏰ After the lectures....</p>
             </div>
             <button class="btn-rsvp" onclick="celebrate()">I'll Be There ❤️</button>
@@ -280,4 +280,5 @@
         }
     </script>
 </body>
+
 </html>
